browser/themes/shared/toolbarbuttons.inc.css
/* ... */
#managed-bookmarks > .toolbarbutton-icon,
#bookmarks-toolbar-placeholder > .toolbarbutton-icon,
#PlacesToolbarItems > .bookmark-item > .toolbarbutton-icon[label]:not([label=""]),
#OtherBookmarks.bookmark-item[container] > .toolbarbutton-icon {
  margin-inline-end: 4px;
}



#PersonalToolbar #import-button {
  padding: 4px !important; 
  margin: 0 2px;
}

#PersonalToolbar #import-button > .toolbarbutton-text {
  min-height: unset; 
}

#PersonalToolbar #import-button > .toolbarbutton-icon {
  margin-inline-end: 4px !important; 
}





#PlacesToolbarItems > toolbarseparator {
  margin: 0;
  padding-inline: 4px;
  appearance: none;
}
#PlacesToolbarItems > toolbarseparator::before {
  content: "";
  display: block;
}


#PersonalToolbar > #wrapper-import-button + #wrapper-personal-bookmarks > #personal-bookmarks,
#PersonalToolbar > #import-button + #personal-bookmarks,
#PlacesToolbarItems > toolbarseparator::before {
  border-inline-start: 1px solid;
  border-image-source: linear-gradient(
    transparent 3.75px,
    var(--toolbarseparator-color) 3.75px,
    var(--toolbarseparator-color) calc(100% - 3.75px),
    transparent calc(100% - 3.75px) );
  border-image-slice: 1;
}

@media (min-resolution: 2dppx) {
  #PersonalToolbar > #wrapper-import-button + #wrapper-personal-bookmarks > #personal-bookmarks,
  #PersonalToolbar > #import-button + #personal-bookmarks,
  #PlacesToolbarItems > toolbarseparator::before {
    border-inline-start-width: 0.5px;
  }
}




#PersonalToolbar .toolbarbutton-badge {
  margin-top: -1px !important;
}

:root[uidensity=touch] #PersonalToolbar .toolbarbutton-badge {
  margin-top: -4px !important;
}



:root[uidensity=compact] .toolbarbutton-badge {
  margin-inline-end: -7px !important;
}





#PersonalToolbar .toolbarbutton-1 > .toolbarbutton-icon,
#PersonalToolbar .toolbarbutton-1 > .toolbarbutton-text,
#PersonalToolbar .toolbarbutton-1 > .toolbarbutton-badge-stack {
  padding: 0 !important;
  background: none !important;
  min-height: 16px;
}

#PersonalToolbar .toolbarbutton-1 {
  padding: 1px var(--toolbarbutton-inner-padding);
  border-radius: var(--toolbarbutton-border-radius);
}


.toolbarbutton-badge.feature-callout {
  width: 14px;
  height: 14px;
  min-width: auto;
  box-shadow: none;
  border: none;
  padding: 0;
  display: block;
  margin: -7px 0 0 !important;
  margin-inline-end: -6px !important;
  background: url(chrome://browser/skin/badge-blue.svg);
}

