Bug 1679138 - fix spacing of the separator between the import button and other bookmarks items, r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D99232

UltraBlame original commit: 5e89d54f4951124dd90bb600f32aa29f232f32eb

--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -404,6 +404,15 @@ toolbarbutton.bookmark-item:not(.subviewbutton) {
 
 
 
+#PersonalToolbar > #wrapper-import-button + #wrapper-personal-bookmarks > #personal-bookmarks,
+#PersonalToolbar > #import-button + #personal-bookmarks {
+  
+  margin-inline-start: 2px;
+  
+  padding-inline-start: 4px;
+}
+
+
 
 #PersonalToolbar .toolbarbutton-badge {
   margin-top: -1px !important;
